// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legacy Content - Peer - Add Data Cut should display the add data cut page 1`] = `
<pf-add-data-cut-page
  addDataCutPageInViewInIframe$={[Function Store]}
  addingDataCut$={[Function Store]}
  addingDataCutError$={[Function Store]}
  companyJobId={[Function Number]}
  companyPayMarketId={[Function Number]}
  cutGuid="null"
  guidelineLimits={[Function Object]}
  initialMapMoveComplete$={[Function Store]}
  map="undefined"
  mapStore={[Function Store]}
  peerMapSummary$={[Function Store]}
  route={[Function Object]}
  store={[Function Store]}
  systemFilter$={[Function Store]}
  userSessionId={[Function Number]}
>
  <pf-async-container>
    <div
      class="d-flex h-100 w-100"
    >
      <div
        class="h-100 filters-container"
      >
        <pf-peer-data-cut-filter-sidebar />
      </div>
      <div
        class="flex-grow-1 d-flex flex-column"
      >
        <div
          class="map-container flex-grow-1"
        >
          
        </div>
        <div
          class="button-container d-flex justify-content-end align-items-center"
        >
          
          <div
            class="buttons"
          >
            <button
              class="btn btn-primary"
              disabled=""
              type="button"
            >
              Add
            </button>
            <button
              class="btn btn-secondary"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </pf-async-container>
</pf-add-data-cut-page>
`;

exports[`Legacy Content - Peer - Add Data Cut should enable the add button when the map data contains more than the MinCompanies 1`] = `
<pf-add-data-cut-page
  addDataCutPageInViewInIframe$={[Function Store]}
  addingDataCut$={[Function Store]}
  addingDataCutError$={[Function Store]}
  companyJobId={[Function Number]}
  companyPayMarketId={[Function Number]}
  cutGuid="null"
  guidelineLimits={[Function Object]}
  initialMapMoveComplete$={[Function Store]}
  map="undefined"
  mapStore={[Function Store]}
  peerMapSummary$={[Function Store]}
  route={[Function Object]}
  store={[Function Store]}
  systemFilter$={[Function Store]}
  userSessionId={[Function Number]}
>
  <pf-async-container>
    <div
      class="d-flex h-100 w-100"
    >
      <div
        class="h-100 filters-container"
      >
        <pf-peer-data-cut-filter-sidebar />
      </div>
      <div
        class="flex-grow-1 d-flex flex-column"
      >
        <div
          class="map-container flex-grow-1"
        >
          
        </div>
        <div
          class="button-container d-flex justify-content-end align-items-center"
        >
          
          <div
            class="buttons"
          >
            <button
              class="btn btn-primary"
              type="button"
            >
              Add
            </button>
            <button
              class="btn btn-secondary"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </pf-async-container>
</pf-add-data-cut-page>
`;
